# meaningful-memory

./: .gitignore  HANDOFF_V04.md  LICENSE  README.md  pyproject.toml
docs/: BUILTWITHCLAUDE.md  KAIROS_INTEGRATION.md  V04_DESIGN.md
examples/: demo.py
meaningful_memory/: __init__.py  config.py  contradiction.py  decay.py  novelty.py  pruning.py  reflection.py  resonance.py  store.py  weight.py
tests/: test_contradiction.py  test_pruning.py  test_reflection.py  test_staleness.py  test_store.py  test_v04.py
