[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meaningful-memory"
version = "0.1.0"
description = "Memory that knows what matters. Significance-aware memory for AI systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Carlos", email = "AlicetheFriendlyBot@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["memory", "ai", "llm", "significance", "novelty", "decay", "consciousness"]

# zero dependencies for core functionality
dependencies = []

[project.urls]
Homepage = "https://github.com/CarlosCreaitart/meaningful-memory"
Repository = "https://github.com/CarlosCreaitart/meaningful-memory"
Issues = "https://github.com/CarlosCreaitart/meaningful-memory/issues"

[tool.setuptools.packages.find]
include = ["meaningful_memory*"]
